--- a/ecommerce-product-website/src/sass/base/_typography.scss
+++ b/ecommerce-product-website/src/sass/base/_typography.scss
@@ -1,30 +1,103 @@
-@font-face {
-  src: url('../../assets/fonts/Montserrat/static/Montserrat-Regular.ttf') format('truetype');
-  font-family: 'Montserrat-400';
-}
-
-@font-face {
-  src: url('../../assets/fonts/Montserrat/static/Montserrat-Medium.ttf') format('truetype');
-  font-family: 'Montserrat-500';
-}
-
-@font-face {
-  src: url('../../assets/fonts/Montserrat/static/Montserrat-SemiBold.ttf') format('truetype');
-  font-family: 'Montserrat-600';
-}
-
-@font-face {
-  src: url('../../assets/fonts/Montserrat/static/Montserrat-Bold.ttf') format('truetype');
-  font-family: 'Montserrat-700';
-}
-
-$font-400: Montserrat-400;
-$font-500: Montserrat-500;
-$font-600: Montserrat-600;
-$font-700: Montserrat-700;
-
+@use '../utils/variables' as v;
 
 
 body { 
-  font-family: $font-400, $font-500, $font-600, $font-700, sans-serif;
+  font-family: v.$font-400, v.$font-500, v.$font-600, v.$font-700, sans-serif;
+}
+
+.upper-title {
+  font-size: 16px;
+  font-family: v.$font-400;
+  line-height: 19.5px;
+  color: rgb(43, 40, 53);
+
+  &--bottom { 
+    margin-bottom: 85px; 
+  }
+  
+  &--header {
+    font-family: v.$font-500;
+    letter-spacing: 1px;
+    color: v.$white;
+  }
+}
+
+
+
+.sub-title {
+  font-size: 14px;
+  font-family: v.$font-400;
+  line-height: 17.07px;
+  color: v.$black;
+
+  &--font {
+    margin-top: 19px;
+    margin-left: 3px;
+    font-size: 40px;
+    line-height: 55px;
+  }
+}
+
+
+.title {
+  margin: 7px -2.56px;
+  font-family: v.$font-700;
+  font-size: 50px;
+  line-height: 55px;
+  color: rgb(43, 40, 53);
+
+  &--header {
+    margin: 13px 0px;
+    font-size: 40px;
+    line-height: 43px;
+    color: v.$white;
+  }
+  
+  &--card { 
+    font-family: v.$font-500;
+  }
+  
+  &--uppercase { 
+    text-transform: uppercase; 
+  }
+}
+
+
+
+.desc {
+  margin-top: 24px;
+  margin-bottom: 43px;
+  font-size: 14px;
+  font-family: v.$font-400;
+  line-height: 27.01px;
+  color: v.$black;
+}
+
+.price {
+  margin-top: 27px;
+  font-size: 40px;
+  font-family: v.$font-400;
+  line-height: 48.76px;
+
+  &--light {  
+    color: rgb(242, 242, 242); 
+  }
+}
+
+.promo {
+  font-size: 13px;
+  font-family: v.$font-500;
+  line-height: 19.62px;
+
+  &--warning {
+    color: rgb(255, 199, 0); 
+  }
+  
+  &--dark { 
+    color: v.$black; 
+  }
+  
+  &--light { 
+    color: v.$white; 
+  }
 }
