--- a/ecommerce-product-website/src/sass/components/_form.scss
+++ b/ecommerce-product-website/src/sass/components/_form.scss
@@ -1,3 +1,5 @@
+@use '../utils/variables';
+
 .form {
   margin: 33px auto 88.19px auto;
   background-color: rgb(248, 248, 249);
@@ -30,7 +32,7 @@
 
     &::placeholder {
       padding-left: 20px;
-      font-family: var(--font-400);
+      font-family: v.$font-400;
       font-size: 14px;
       line-height: 17.07px;
     }
