--- a/ecommerce-product-website/src/sass/components/_others.scss
+++ b/ecommerce-product-website/src/sass/components/_others.scss
@@ -1,3 +1,5 @@
+@use '../utils/variables' as v;
+
 .dot__item {
   margin: 30px 4px 22px 8px;
   height: 37px;
@@ -10,7 +12,7 @@
   position: relative;
 
   &--light { 
-    background-color: rgb(255, 255, 255); 
+    background-color: v.$white; 
   }
   
   &--light::after {
@@ -18,7 +20,7 @@
     height: 44px;
     width: 44px;
     border-radius: 50%;
-    border: 1px solid rgb(0, 0, 0);
+    border: 1px solid v.$black;
     position: absolute;
     top: -5px;
     left: -6px
@@ -29,7 +31,7 @@
   }
   
   &--dark { 
-    background-color: rgb(0, 0, 0); 
+    background-color: v.$black; 
   }
 }
 
@@ -48,7 +50,7 @@
     margin: 0px 5px;
 
     &--dark { 
-      background-color: rgb(0, 0, 0); 
+      background-color: v.$black; 
     }
     
     &--muted { 
