Adding media queries

--- a/ecommerce-product-website/src/sass/abstracts/_variables.scss
+++ b/ecommerce-product-website/src/sass/abstracts/_variables.scss
@@ -26,6 +26,11 @@ $font-700: Montserrat-700;
 $black: rgb(0, 0, 0);
 $white: rgb(255, 255, 255);
 $header-bg: rgba(25, 23, 32, 0.47);
+$btn-warning: rgb(255, 199, 0);
 
 $max-width: 1440px;
 $min-width: 370px;
+
+$large: 1440px;
+$medium: 1200px;
+$small: 850px;
