--- a/ecommerce-product-website/src/sass/components/_others.scss
+++ b/ecommerce-product-website/src/sass/components/_others.scss
@@ -1,63 +1,5 @@
-@use '../utils/variables' as v;
-
-.dot__item {
-  margin: 30px 4px 22px 8px;
-  height: 37px;
-  width: 37px;
-  border-radius: 50%;
-  display: inline-block;
-  border: 1px solid rgb(234, 234, 234);
-  box-sizing: border-box;
-  box-shadow: 0px 2px 1px 1px rgba(0, 0, 0, 0.14);
-  position: relative;
-
-  &--light { 
-    background-color: v.$white; 
-  }
-  
-  &--light::after {
-    content: "";
-    height: 44px;
-    width: 44px;
-    border-radius: 50%;
-    border: 1px solid v.$black;
-    position: absolute;
-    top: -5px;
-    left: -6px
-  }
-  
-  &--danger { 
-    background-color: rgb(221, 86, 86); 
-  }
-  
-  &--dark { 
-    background-color: v.$black; 
-  }
-}
-
-
-
-.carousel {
-  position: absolute;
-  bottom: 170px;
-  right: 343px;
-
-  &__item {
-    height: 10px;
-    width: 10px;
-    border-radius: 50%;
-    display: inline-block;
-    margin: 0px 5px;
-
-    &--dark { 
-      background-color: v.$black; 
-    }
-    
-    &--muted { 
-      background-color: rgb(209, 209, 209); 
-    }
-  }
-}
+@use '../abstracts/variables' as v;
+@use '../abstracts/mixins' as m;
 
 .group { 
   display: flex; 
@@ -65,4 +7,8 @@
 
 .collapse-icon {
   display: none;
+
+  @include m.mediaQuery(v.$medium) {
+    display: inline-flex;
+  }
 }
