--- a/ecommerce-product-website/src/sass/components/_area.scss
+++ b/ecommerce-product-website/src/sass/components/_area.scss
@@ -1,3 +1,6 @@
+@use '../abstracts/variables' as v;
+@use '../abstracts/mixins' as m;
+
 .area {
   display: flex;
   position: relative;
@@ -11,6 +14,22 @@
     position: absolute;
     top: 0;
     left: 0;
+
+    @include m.mediaQuery(v.$large) {
+      left: -50px;
+    }
+
+    @include m.mediaQuery(v.$medium) {
+      @include m.img($width: 60vw) {
+        left: 0;
+      }
+    }
+    
+    @include m.mediaQuery(v.$small) {
+      @include m.img;
+      position: relative;
+      background-color:rgb(43, 40, 53);
+    }
   }
   
   &__item {
@@ -25,6 +44,10 @@
   
   &--header-bg {
     background-color: rgb(43, 40, 53);
+
+    @include m.mediaQuery(v.$small) {
+      background-color: transparent;
+    }
   }
   
   &--bg-product-beats {
@@ -35,6 +58,10 @@
   
   &--bg-product-inear { 
     background-color: rgb(244, 244, 244); 
+  }
+
+  @include m.mediaQuery(v.$small) {
+    flex-direction: column;
   }
 }
 
