--- a/ecommerce-product-website/src/sass/components/_button.scss
+++ b/ecommerce-product-website/src/sass/components/_button.scss
@@ -1,4 +1,5 @@
-@use '../utils/variables' as v;
+@use '../abstracts/variables' as v;
+@use '../abstracts/mixins' as m;
 
 .btn {
   width: 170px;
@@ -16,12 +17,16 @@
 
   &--warning {
     color: v.$black;
-    background-color: rgb(255, 199, 0);
+    background-color: v.$btn-warning;
   } 
   
   &--header {
     margin-left: 35px;
     margin-bottom: 11px;
+
+    @include m.mediaQuery(v.$small) {
+      margin-left: 20px;
+    }
   }
   
   &--dark {
@@ -33,6 +38,13 @@
     margin: 4px 0px;
     width: 507px;
     height: 41px;
+
+    @include m.mediaQuery(v.$medium) {
+      width: 50vw;
+    }
+    @include m.mediaQuery(v.$small) {
+      min-width: 298px;
+    }
   }
   
   &--card { 
@@ -40,6 +52,11 @@
     margin: 15px 19px;
     padding: 12px 30px;
     width: 145px;
+  }
+
+  @include m.mediaQuery(v.$medium) {
+    width: 150px;
+    padding: 0;
   }
 }
 
