--- a/ecommerce-product-website/src/sass/components/_card.scss
+++ b/ecommerce-product-website/src/sass/components/_card.scss
@@ -1,5 +1,5 @@
-@use '../utils/variables' as v;
-@use '../utils/mixins';
+@use '../abstracts/variables' as v;
+@use '../abstracts/mixins' as m;
 
 .card {
   max-width: 390px;
@@ -35,27 +35,27 @@
   }
   
   &--backgroud-first {
-    @include card_item($url: url(../../assets/images/yellow-headphone.svg));
+    @include m.card_item($url: url(../../assets/images/yellow-headphone.svg));
   }
   
   &--backgroud-second {
-    @include card_item($url: url(../../assets/images/black-inear.svg));
+    @include m.card_item($url: url(../../assets/images/black-inear.svg));
   }
   
   &--backgroud-third {
-    @include card_item($url: url(../../assets/images/gray-headphone.svg));
+    @include m.card_item($url: url(../../assets/images/gray-headphone.svg));
   }
   
   &--backgroud-fourth {
-    @include card_item($url: url(../../assets/images/gold-inear.svg), $position: bottom center);
+    @include m.card_item($url: url(../../assets/images/gold-inear.svg), $position: bottom center);
   }
   
   &--backgroud-fifth {
-    @include card_item($url: url(../../assets/images/navy-inear.svg));
+    @include m.card_item($url: url(../../assets/images/navy-inear.svg));
   }
   
   &--backgroud-sixth {
-    @include card_item($url: url(../../assets/images/black-inear-lightning.svg), $position: 130px bottom);
+    @include m.card_item($url: url(../../assets/images/black-inear-lightning.svg), $position: 130px bottom);
   }
 }
 
