--- a/ecommerce-product-website/src/sass/base/_font.scss
+++ b/ecommerce-product-website/src/sass/base/_font.scss
@@ -1,19 +1,19 @@
 @font-face {
-  src: url('../../assets/fonts/Montserrat/static/Montserrat-Regular.ttf') format('truetype');
+  src: url('../assets/fonts/Montserrat/static/Montserrat-Regular.ttf') format('truetype');
   font-family: 'Montserrat-400';
 }
 
 @font-face {
-  src: url('../../assets/fonts/Montserrat/static/Montserrat-Medium.ttf') format('truetype');
+  src: url('../assets/fonts/Montserrat/static/Montserrat-Medium.ttf') format('truetype');
   font-family: 'Montserrat-500';
 }
 
 @font-face {
-  src: url('../../assets/fonts/Montserrat/static/Montserrat-SemiBold.ttf') format('truetype');
+  src: url('../assets/fonts/Montserrat/static/Montserrat-SemiBold.ttf') format('truetype');
   font-family: 'Montserrat-600';
 }
 
 @font-face {
-  src: url('../../assets/fonts/Montserrat/static/Montserrat-Bold.ttf') format('truetype');
+  src: url('../assets/fonts/Montserrat/static/Montserrat-Bold.ttf') format('truetype');
   font-family: 'Montserrat-700';
 }
