--- a/ecommerce-product-website/src/styles/pages/_home.scss
+++ b/ecommerce-product-website/src/styles/pages/_home.scss
@@ -9,6 +9,10 @@
   width: 100%;
 }
 
+.group { 
+  display: flex; 
+}
+
 .pd-product-speaker {
   @include m.spacing_section($left: 93px, $right: 54px);
 
