--- a/ecommerce-product-website/src/styles/abstracts/_variables.scss
+++ b/ecommerce-product-website/src/styles/abstracts/_variables.scss
@@ -3,6 +3,7 @@ $font-500: Montserrat-500;
 $font-600: Montserrat-600;
 $font-700: Montserrat-700;
 
+//fix name
 $black: rgb(0, 0, 0);
 $white: rgb(255, 255, 255);
 $header-bg: rgba(25, 23, 32, 0.47);
@@ -11,6 +12,9 @@ $btn-warning: rgb(255, 199, 0);
 $max-width: 1440px;
 $min-width: 370px;
 
+$nav-index: 3;
+
+//naming devices
 $large: 1440px;
 $medium: 1200px;
 $small: 768px;
