--- a/ecommerce-product-website/src/styles/components/_card.scss
+++ b/ecommerce-product-website/src/styles/components/_card.scss
@@ -8,7 +8,7 @@
   margin-top: 35px;
   background-color: rgb(248, 248, 249);
 
-  &--spacing { 
+  &__title--spacing { 
     margin-top: 23px;
   }
   
