--- a/ecommerce-product-website/src/styles/base/_font.scss
+++ b/ecommerce-product-website/src/styles/base/_font.scss
@@ -1,19 +1,47 @@
 @font-face {
-  src: url('../assets/fonts/Montserrat/static/Montserrat-Regular.ttf') format('truetype');
   font-family: 'Montserrat-400';
+  src: url('../assets/fonts/Montserrat/static/Montserrat-Regular.eot');
+  src: url('../assets/fonts/Montserrat/static/Montserrat-Regular.eot?#iefix') format('embedded-opentype'),
+  url('../assets/fonts/Montserrat/static/Montserrat-Regular.woff2') format('woff2'),
+  url('../assets/fonts/Montserrat/static/Montserrat-Regular.woff') format('woff'),
+  url('../assets/fonts/Montserrat/static/Montserrat-Regular.ttf') format('truetype'),
+  url('../assets/fonts/Montserrat/static/Montserrat-Regular.svg') format('svg'),;
+  font-weight: normal;
+  font-style: normal;
 }
 
 @font-face {
-  src: url('../assets/fonts/Montserrat/static/Montserrat-Medium.ttf') format('truetype');
   font-family: 'Montserrat-500';
+  src: url('../assets/fonts/Montserrat/static/Montserrat-Medium.eot');
+  src: url('../assets/fonts/Montserrat/static/Montserrat-Medium.eot?#iefix') format('embedded-opentype'),
+  url('../assets/fonts/Montserrat/static/Montserrat-Medium.woff2') format('woff2'),
+  url('../assets/fonts/Montserrat/static/Montserrat-Medium.woff') format('woff'),
+  url('../assets/fonts/Montserrat/static/Montserrat-Medium.ttf') format('truetype'),
+  url('../assets/fonts/Montserrat/static/Montserrat-Medium.svg') format('svg'),;
+  font-weight: 500;
+  font-style: normal;
 }
 
 @font-face {
-  src: url('../assets/fonts/Montserrat/static/Montserrat-SemiBold.ttf') format('truetype');
   font-family: 'Montserrat-600';
+  src: url('../assets/fonts/Montserrat/static/Montserrat-SemiBold.eot');
+  src: url('../assets/fonts/Montserrat/static/Montserrat-SemiBold.eot?#iefix') format('embedded-opentype'),
+  url('../assets/fonts/Montserrat/static/Montserrat-SemiBold.woff2') format('woff2'),
+  url('../assets/fonts/Montserrat/static/Montserrat-SemiBold.woff') format('woff'),
+  url('../assets/fonts/Montserrat/static/Montserrat-SemiBold.ttf') format('truetype'),
+  url('../assets/fonts/Montserrat/static/Montserrat-SemiBold.svg') format('svg'),;
+  font-weight: 600;
+  font-style: normal;
 }
 
 @font-face {
-  src: url('../assets/fonts/Montserrat/static/Montserrat-Bold.ttf') format('truetype');
   font-family: 'Montserrat-700';
+  src: url('../assets/fonts/Montserrat/static/Montserrat-Bold.eot');
+  src: url('../assets/fonts/Montserrat/static/Montserrat-Bold.eot?#iefix') format('embedded-opentype'),
+  url('../assets/fonts/Montserrat/static/Montserrat-Bold.woff2') format('woff2'),
+  url('../assets/fonts/Montserrat/static/Montserrat-Bold.woff') format('woff'),
+  url('../assets/fonts/Montserrat/static/Montserrat-Bold.ttf') format('truetype'),
+  url('../assets/fonts/Montserrat/static/Montserrat-Bold.svg') format('svg'),;
+  font-weight: bold;
+  font-style: normal;
 }
