--- a/ecommerce-product-website/src/styles/base/_typography.scss
+++ b/ecommerce-product-website/src/styles/base/_typography.scss
@@ -1,27 +1,28 @@
-@use '../abstracts/variables' as v;
-@use '../abstracts/mixins' as m;
+@use '../abstracts/variables' as var;
+@use '../abstracts/mixins' as mixin;
+@use '../abstracts/colors' as color;
 
 
 body { 
-  font-family: v.$font-400, sans-serif;
+  font-family: var.$font-400, sans-serif;
 }
 
 .upper-title {
   font-size: 16px;
   line-height: 19.5px;
-  color: rgb(43, 40, 53);
+  color: color.$baltic-sea;
 
   &--bottom { 
     margin-bottom: 85px; 
   }
   
   &--header {
-    font-family: v.$font-500;
+    font-family: var.$font-500;
     letter-spacing: 1px;
-    color: v.$white;
+    color: color.$white;
 
-    @include m.mediaQuery(v.$small) {
-      color: v.$black;
+    @include mixin.mediaQuery(var.$small) {
+      color: color.$black;
     }
   }
 }
@@ -31,7 +32,7 @@ body {
 .sub-title {
   font-size: 14px;
   line-height: 17px;
-  color: v.$black;
+  color: color.$black;
 
   &--font {
     margin-top: 19px;
@@ -44,27 +45,27 @@ body {
 
 .title {
   margin: 7px 0;
-  font-family: v.$font-700;
+  font-family: var.$font-700;
   font-size: 50px;
   line-height: 55px;
-  color: rgb(43, 40, 53);
+  color: color.$baltic-sea;
 
   &--header {
     margin: 13px 0px;
     font-size: 40px;
     line-height: 43px;
-    color: v.$white;
+    color: color.$white;
 
-    @include m.mediaQuery(v.$small) {
+    @include mixin.mediaQuery(var.$small) {
       font-size: 32px;
-      color: v.$black;
+      color: color.$black;
     }
   }
   
   &--card { 
-    font-family: v.$font-500;
+    font-family: var.$font-500;
     
-    @include m.mediaQuery(v.$small) {
+    @include mixin.mediaQuery(var.$small) {
       font-size: 40px;
     }
   }
@@ -73,13 +74,13 @@ body {
     text-transform: uppercase; 
   }
 
-  @include m.mediaQuery(v.$large) {
+  @include mixin.mediaQuery(var.$large) {
     font-size: 40px;
   }
-  @include m.mediaQuery(v.$medium) {
+  @include mixin.mediaQuery(var.$medium) {
     font-size: 35px;
   }
-  @include m.mediaQuery(v.$small) {
+  @include mixin.mediaQuery(var.$small) {
     font-size: 32px;
   }
 }
@@ -90,42 +91,42 @@ body {
   margin-top: 24px;
   margin-bottom: 43px;
   font-size: 14px;
-  line-height: 27.01px;
-  color: v.$black;
+  line-height: 27px;
+  color: color.$black;
 }
 
 .price {
   margin-top: 27px;
   font-size: 40px;
-  line-height: 48.76px;
+  line-height: 49px;
 
   &--light {  
-    color: rgb(242, 242, 242); 
+    color: color.$porcelain; 
   }
   
-  @include m.mediaQuery(v.$small) {
-    color: v.$black;
+  @include mixin.mediaQuery(var.$small) {
+    color: color.$black;
   }
 }
 
 .promo {
   font-size: 13px;
-  font-family: v.$font-500;
-  line-height: 19.62px;
+  font-family: var.$font-500;
+  line-height: 20px;
 
   &--warning {
-    color: rgb(255, 199, 0); 
+    color: color.$supernova; 
 
-    @include m.mediaQuery(v.$small) {
-      color: v.$black;
+    @include mixin.mediaQuery(var.$small) {
+      color: color.$black;
     }
   }
   
   &--dark { 
-    color: v.$black; 
+    color: color.$black; 
   }
   
   &--light { 
-    color: v.$white; 
+    color: color.$white; 
   }
 }
