--- a/ecommerce-product-website/src/styles/components/_card.scss
+++ b/ecommerce-product-website/src/styles/components/_card.scss
@@ -1,12 +1,13 @@
-@use '../abstracts/variables' as v;
-@use '../abstracts/mixins' as m;
+@use '../abstracts/variables' as var;
+@use '../abstracts/mixins' as mixin;
+@use '../abstracts/colors' as color;
 
 .card {
   max-width: 390px;
   box-sizing: content-box;
   margin: auto 18px;
   margin-top: 35px;
-  background-color: rgb(248, 248, 249);
+  background-color: color.$desert-storm;
 
   &__title--spacing { 
     margin-top: 23px;
@@ -25,9 +26,9 @@
   &__price {
     display: inline-block;
     font-size: 25px;
-    font-family: v.$font-600;
-    line-height: 30.48px;
-    color: rgb(157, 130, 32);
+    font-family: var.$font-600;
+    line-height: 31px;
+    color: color.$reef-gold;
 
     &--spacing { 
       margin: 20px 0px; 
@@ -35,32 +36,32 @@
   }
   
   &--backgroud-first {
-    @include m.card_item($url: url(../assets/images/yellow-headphone.svg));
+    @include mixin.card_item($url: url(../assets/images/yellow-headphone.svg));
   }
   
   &--backgroud-second {
-    @include m.card_item($url: url(../assets/images/black-inear.svg));
+    @include mixin.card_item($url: url(../assets/images/black-inear.svg));
   }
   
   &--backgroud-third {
-    @include m.card_item($url: url(../assets/images/gray-headphone.svg));
+    @include mixin.card_item($url: url(../assets/images/gray-headphone.svg));
   }
   
   &--backgroud-fourth {
-    @include m.card_item($url: url(../assets/images/gold-inear.svg), $position: bottom center);
+    @include mixin.card_item($url: url(../assets/images/gold-inear.svg), $position: bottom center);
   }
   
   &--backgroud-fifth {
-    @include m.card_item($url: url(../assets/images/navy-inear.svg));
+    @include mixin.card_item($url: url(../assets/images/navy-inear.svg));
   }
   
   &--backgroud-sixth {
-    @include m.card_item($url: url(../assets/images/black-inear-lightning.svg), $position: 130px bottom);
+    @include mixin.card_item($url: url(../assets/images/black-inear-lightning.svg), $position: 130px bottom);
   }
 }
 
 .product-container {
-  background-color: rgb(251, 252, 255);
+  background-color: color.$milk-white;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
