--- a/ecommerce-product-website/src/styles/main.scss
+++ b/ecommerce-product-website/src/styles/main.scss
@@ -1,4 +1,5 @@
 @use 'abstracts/variables';
+@use 'abstracts/colors';
 @use 'abstracts/mixins';
 
 @use 'base/reset';
@@ -16,6 +17,5 @@
 @use 'components/content';
 @use 'components/carousel';
 @use 'components/dot';
-@use 'components/others';
 
 @use 'pages/home';
