--- a/ecommerce-product-website/src/styles/abstracts/_colors.scss
+++ b/ecommerce-product-website/src/styles/abstracts/_colors.scss
@@ -13,3 +13,4 @@ $pastel-red: rgb(221, 86, 86);
 $pink-swan: rgb(184, 184, 184);
 $pale-slate: rgb(191, 191, 191);
 $porcelain: rgb(242, 242, 242);
+$dot-shadow :rgba(0, 0, 0, 0.14);
